--- a/RestaurantTinder/Vue/restaurant-tinder/public/index.html
+++ b/RestaurantTinder/Vue/restaurant-tinder/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>dot.ico">
     <title>restaurant-tinder</title>
+
+    <!-- <link href="/src/assets/css/one-page-wonder.min.css" rel="stylesheet"> -->
   </head>
   <body>
     <noscript>
@@ -13,5 +15,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
   </body>
 </html>
